# psychic-train

./: .gitignore  README.md  _config.yml  automation_loop.py  requirements.txt
hardware_examples/: README.md  build.sbt
hardware_examples/src/main/scala/cpu/: Alu.scala  Control.scala  Core.scala  HazardUnit.scala  ImmGen.scala  Instructions.scala  Memory.scala  PipelineRegisters.scala  RegisterFile.scala  Top.scala
hardware_examples/src/main/scala/fhe/: Bootstrapping.scala  FHEAccelerator.scala  HomomorphicGates.scala  LWE.scala  ModularArithmetic.scala  NTT.scala  PolynomialUnit.scala  README.md  RLWE.scala
hardware_examples/src/main/scala/systolic/: ProcessingElement.scala  SystolicArray.scala  SystolicArrayTop.scala
hardware_examples/src/main/scala/uart/: Rx.scala  Tx.scala  Uart.scala
mcp-fpga-agent/: server.py
mcp-fpga-agent/constraints/: arty_a7_100t.xdc
mcp-fpga-agent/prompts/: system_prompt.md
mcp-saleae-agent/: server.py  spi_example.py
numpy-to-systolic/: Cargo.toml  README.md
numpy-to-systolic/examples/: chained_ops.rs  matmul_2x2.rs  matmul_large.rs
numpy-to-systolic/src/: analyzer.rs  ast.rs  codegen.rs  error.rs  hardware.rs  lexer.rs  lib.rs  main.rs  parser.rs  tiling.rs
