[package]
name = "numpy_to_systolic"
version = "0.1.0"
edition = "2021"
description = "A compiler that converts NumPy-style matrix operations to systolic array passes"
authors = ["FPGA Team"]
license = "MIT"

[dependencies]
# Parsing
logos = "0.14"
thiserror = "1.0"

# Serialization for hardware interface
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Pretty printing
colored = "2.1"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "numpy2systolic"
path = "src/main.rs"

[[example]]
name = "matmul_2x2"
path = "examples/matmul_2x2.rs"

[[example]]
name = "matmul_large"
path = "examples/matmul_large.rs"

[[example]]
name = "chained_ops"
path = "examples/chained_ops.rs"
